add almovie plugins

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ title: 徐辉 - 一个追求前端技术梦Blog
         <li><a href="https://github.com/gafish/gafish.github.com/issues/4" target="_blank">D3.js 入门教程系列</a></li>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/5" target="_blank">D3.js 进阶教程系列</a></li>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/6" target="_blank">Object.observe 从ES7草案中移除后的解决方案</a></li>
+        <li><a href="https://github.com/gafish/gafish.github.com/issues/9" target="_blank">【翻译】在LESS中执行JavaScript</a></li>
+        <li><a href="https://github.com/gafish/gafish.github.com/issues/8" target="_blank">Less 最佳实践</a></li>
+        <li><a href="https://github.com/gafish/gafish.github.com/issues/10" target="_blank">也讲讲对D3 clipAngle方法的理解</a></li>
     </ul>
   </div>
   <div class="column">
@@ -26,10 +29,8 @@ title: 徐辉 - 一个追求前端技术梦Blog
   <div class="column">
     <h3>作品展示</h3>
     <ul>
-      <li><a href="https://github.com/gafish/nodejs-pictures" target="_blank">Nodejs - 本地图片预览</a></li>
-      <!-- <li><a href="https://github.com/gafish/kissy-numberEffect" target="_blank">kissy - 数字滚动动效组件</a></li> -->
-      <!-- <li><a href="https://github.com/gafish/js-frameCartoon" target="_blank">js - 逐帧动画组件</a></li> -->
-      <!-- <li><a href="https://github.com/gafish/js-sinaEmotion" target="_blank">js - 新浪微博表情组件</a></li> -->
+      <li><a href="https://www.npmjs.com/package/pictures" target="_blank">Nodejs - 本地图片预览</a></li>
+      <li><a href="https://chrome.google.com/webstore/detail/%E9%98%BF%E9%87%8C%E7%94%B5%E5%BD%B1%E6%B4%BE/mdhjophanlgbocboopnfapdeaceiidok" target="_blank">Plugins - 阿里电影派Chrome插件</a></li>
     </ul>
   </div>
   <div class="column">
