--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ title: 徐辉的博客
   <div class="column">
     <h3>作品</h3>
     <ul>
-      <li><a href="https://www.npmjs.com/package/pictures" target="_blank">Nodejs - 本地图片预览</a></li>
-      <li><a href="https://chrome.google.com/webstore/detail/%E9%98%BF%E9%87%8C%E7%94%B5%E5%BD%B1%E6%B4%BE/mdhjophanlgbocboopnfapdeaceiidok" target="_blank">Plugins - 阿里电影派Chrome插件</a></li>
+      <li><a href="https://www.npmjs.com/package/pictures" target="_blank">Pictures - 本地图片预览</a></li>
+      <li><a href="https://chrome.google.com/webstore/detail/%E9%98%BF%E9%87%8C%E7%94%B5%E5%BD%B1%E6%B4%BE/mdhjophanlgbocboopnfapdeaceiidok" target="_blank">Alimovie - 电影派Chrome插件</a></li>
     </ul>
   </div>
   <div class="column">
