--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@ title: 徐辉的博客
         <li><a href="https://github.com/gafish/gafish.github.com/issues/4" target="_blank">D3.js 入门教程系列</a></li>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/5" target="_blank">D3.js 进阶教程系列</a></li>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/6" target="_blank">Object.observe 从ES7草案中移除后的解决方案</a></li>
-        <li><a href="https://github.com/gafish/gafish.github.com/issues/9" target="_blank">【译】在LESS中执行JavaScript</a></li>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/8" target="_blank">Less 最佳实践</a></li>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/10" target="_blank">也讲讲对D3 clipAngle方法的理解</a></li>
+    </ul>
+  </div>
+  <div class="column">
+    <h3>翻译</h3>
+    <ul>
+        <li><a href="https://github.com/gafish/gafish.github.com/issues/9" target="_blank">【译】在LESS中执行JavaScript</a></li>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/16" target="_blank">【译】Create React App 中文README</a></li>
     </ul>
   </div>
