--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ title: 徐辉的博客
     <ul>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/9" target="_blank">【译】在LESS中执行JavaScript</a></li>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/16" target="_blank">【译】Create React App 中文README</a></li>
+        <li><a href="https://github.com/gafish/react-website-cn" target="_blank">【译】React 官网中文</a></li>
     </ul>
   </div>
   <div class="column">
