--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ title: 徐辉的博客
     <h3>翻译</h3>
     <ul>
         <li><a href="https://github.com/gafish/gafish.github.com/issues/9" target="_blank">【译】在LESS中执行JavaScript</a></li>
-        <li><a href="https://github.com/gafish/gafish.github.com/issues/16" target="_blank">【译】Create React App 中文README</a></li>
         <li><a href="https://github.com/gafish/react-website-cn" target="_blank">【译】React 官网中文</a></li>
+        <li><a href="https://github.com/gafish/gafish.github.com/issues/16" target="_blank">【译】Create React App 中文README</a></li>
+        <li><a href="https://github.com/gafish/gafish.github.com/issues/18" target="_blank">【译】prop-types 中文README</a></li>
     </ul>
   </div>
   <div class="column">
