--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 layout: index
 title: 徐辉的博客
 ---
-
+<style>
+  .main { font-size: 14px; }
+  .main .nav { width: 200px; margin: 0 auto; }
+</style>
 <div class="main">
-2018,做点不一样的
+  <div class="nav">
+    <ul>
+      <li><a href="//github.com/gafish/gafish.github.com/issues" target="_blank">文章</a></li>
+    </ul>
+  </div>
 </div>
