--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@ layout: index
 title: 徐辉的博客
 ---
 <style>
-  .main { font-size: 14px; }
+  .main { padding: 50px 0; }
   .main .nav { width: 200px; margin: 0 auto; }
+  .main .nav li { list-style: none; }
+  .main .nav li a { font-size: 14px; color: #000; text-decoration: none; }
 </style>
 <div class="main">
   <div class="nav">
