--- a/demo/network_graph.html
+++ b/demo/network_graph.html
@@ -5,11 +5,80 @@ layout: demo
 <head>
     <title>关系图谱</title>
     <script src="https://cdn.bootcss.com/d3/5.9.7/d3.js"></script>
+    <style>
+        #dataset {
+            width: 1200px;
+            margin: 0 auto;
+        }
+        #dataset textarea {
+            width: 1000px;
+            height: 50px;
+        }
+        #root {
+            width: 1200px;
+            height: 600px;
+            margin: auto;
+            /* position: absolute;
+            top: 0; right: 0; bottom: 0; left: 0; */
+        }
+
+        svg {
+            box-shadow: 0 0 3px 3px #eee;
+        }
+    </style>
 </head>
 <body>
+    <div id="dataset">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <button id="start">start</button>
+    </div>
     <div id="root"></div>
     <script>
+        const generateNetwork = (data) => {
+            d3.select('#root').html('');
+            const width = 1200;
+            const height = 600;
+            const nodes = data.nodes;
+            const links = data.links;
+            const svgRoot = d3.select('#root').append('svg').attr('width', width).attr('height', height);
+            const graphRoot = svgRoot.append('g');
+            const graphLink = graphRoot.append('g').selectAll('line').data(links).enter().append('line').attr('stroke', '#ccc');
+            const graphNode = graphRoot.append('g').selectAll('circle').data(nodes).enter().append('circle').attr('r', 6);
 
+            svgRoot.call(d3.zoom().on('zoom', () => {
+                graphRoot.attr("transform", "translate(" + d3.event.transform.x + "," + d3.event.transform.y + ")scale(" + d3.event.transform.k + ")");
+                // graphRoot.attr("transform", "scale(" + d3.event.transform.k + ")");
+                // graphRoot.attr("transform-origin", `${width/2}px, ${height/2}px`);
+                graphRoot.attr("transform-origin", 'center');
+            }));
+
+            graphNode.attr('fill', (d, i) => d3.schemePaired[d.type] || '#000');
+            
+            const forceSimulation = d3.forceSimulation(nodes);
+            forceSimulation
+                .force("collision", d3.forceCollide(10))
+                .force("charge", d3.forceManyBody().distanceMax(100))
+                .force('center', d3.forceCenter(width/2, height/2))
+                .force('link', d3.forceLink(links).id(d => d.id))
+                // .force("r", d3.forceRadial(width, width/2, height/2))
+                .on('tick', () => {
+                    graphLink
+                        .attr('x1', d => d.source.x)
+                        .attr('y1', d => d.source.y)
+                        .attr('x2', d => d.target.x)
+                        .attr('y2', d => d.target.y);
+                    graphNode
+                        .attr('cx', d => d.x)
+                        .attr('cy', d => d.y);
+                });
+        };
+
+        d3.json('./mocks/network.json').then(generateNetwork);
+
+        d3.select('#start').on('click', () => {
+            const data = d3.select('#dataset textarea').node().value;
+            generateNetwork(JSON.parse(data));
+        });
     </script>
 </body>
 </html>
