--- a/demo/network_graph.html
+++ b/demo/network_graph.html
@@ -145,6 +145,7 @@ layout: demo
                 .attr("dominant-baseline","middle")
                 .attr("text-anchor", "middle")
                 .attr("font-size", "12")
+                .attr("transform", "translate(0 20)")
                 .text(d => d.label);
             graphLabel
                 .exit()
